changed the scrollbar color from accent to bg fixed some more issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -540,8 +540,12 @@ textarea.input-class {
 .section-image {
     max-height: 500px;
     /*width: inherit;*/
-    width: 70%;
-    margin-block: 30px;
+    /*width: 70%;*/
+
+    margin-right: 10px;
+    margin-left: 20px;
+    width: auto;
+    /*margin-block: 30px;*/
     /*align-self: center;*/
     padding: 14px;
     object-fit: contain;
@@ -784,12 +788,13 @@ textarea.input-class {
     animation: fadeIn 0.2s ease;
 }
 .create-course {
-    overflow: scroll;
+    overflow: auto;
     display: flex;
     flex-direction: column;
-    border-radius: 14px;
+    border-radius: 10px;
     /*border: 2px solid var(--accent);*/
     padding: 20px;
+    border: 2px solid var(--accent);
     padding-top: 50px;
     background-color: var(--bg);
     animation: slideUp 0.2s ease;
@@ -817,7 +822,6 @@ textarea.input-class {
     /*transition:
         height 0.4s cubic-bezier(0.34, 1.56, 0.64, 1),
         width 0.5s cubic-bezier(0.22, 1, 0.36, 1) 0.15s;*/
-    border: 2px solid var(--accent);
 }
 .create-course.small-fit {
     width: 90%;
